--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
       obcaecati quis eum, recusandae, corporis rem eligendi quae, incidunt ea
       sint debitis?
     </p>
+
+    <div>
+      <img
+        src="assets/image.png"
+        alt="Hello World from Space"
+        style="width: 100%; max-width: 960px"
+      />
+    </div>
   </body>
 </html>
