updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       obcaecati quis eum, recusandae, corporis rem eligendi quae, incidunt ea
       sint debitis?
     </p>
+    <p>This line is here to show how merging works.</p>
   </body>
 </html>
