--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
         style="width: 100%; max-width: 960px"
       />
     </div>
+    <p>A new line in our file!</p>
+    <div>
+      <img
+        src="assets/image.png"
+        alt="Hello Git"
+        style="width: 100%; max-width: 640px"
+      />
+    </div>
   </body>
 </html>
